# service-base-auth-fastapi

./: compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 21364ca38ab1_add_oauth_account.py  7d027468cc23_add_failed_attempts_column.py  8227dc14b060_init.py
app/core/: config.py
docs/: ci.md  packages.md  workflow.md
